# ABII-example-logging-plugin

./: AUTHORS  CMakeLists.txt  INSTALL.md  LICENSE  README.md  syms
.github/workflows/: cmake-single-platform.yml
hooks/: header.cpp  header.h
hooks/bits/: dlfcn.h
include/: header.cpp  header.h
include/bits/: dlfcn.h
